gen html of main index.html file

--- a/bin/init/lib/core/index.ejs
+++ b/bin/init/lib/core/index.ejs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>node_cli_tools</title>
+    <title><%= title %></title>
   </head>
   <body>
     <h1>node_cli_tools</h1>
