updated core theme of nc-init to include layouts

--- a/bin/init/lib/core/index.ejs
+++ b/bin/init/lib/core/index.ejs
@@ -3,6 +3,6 @@
     <title><%= title %></title>
   </head>
   <body>
-    <h1>node_cli_tools</h1>
+    <%- include('./layout/' + currentPage.layout, this); %>
   </body>
 </html>
