--- a/bin/init/lib/core/index.ejs
+++ b/bin/init/lib/core/index.ejs
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <%- include('./nav', this) %>
