--- a/bin/init/lib/core/source/css/styles.css
+++ b/bin/init/lib/core/source/css/styles.css
@@ -2,6 +2,9 @@
     font-family: arial,Georgia;
 }
 body{
-    background:black;
-    color:white;
+    background:#cfcfcf;
+    color:#2a2a2a;
+}
+h1,h2,h3,h4,h5,h6{
+    color:#000000;
 }
