--- a/bin/init/lib/core/nav.ejs
+++ b/bin/init/lib/core/nav.ejs
@@ -1,4 +1,6 @@
-</p>
-  <a href="/">Home</a> | 
-  <a href="/blog/page/1/index.html">Blog</a>
-</p>
+<div id="container_nav">
+  </p>
+    <a href="/">Home</a> | 
+    <a href="/blog/page/1/index.html">Blog</a>
+  </p>
+</div>
