--- a/bin/init/lib/core/index.ejs
+++ b/bin/init/lib/core/index.ejs
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title><%= title %></title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
