gen post text helper

--- a/bin/init/lib/core/layout/home.ejs
+++ b/bin/init/lib/core/layout/home.ejs
@@ -6,6 +6,8 @@
 <a href="<%- '/blog' + post.dir_post + '/index.html' %>" > Title: <%- post.head.title %></a><br>
 Path: <%-  post.dir_post %><br>
 
+<%= getPostText(post.md);  %>
+
 <br>
 
 
